first working version of product paging works, next step, recycler view for listed reviews

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ repositories {
 
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "app.subversive.groceryratings"
@@ -49,4 +49,5 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.0.1@aar') {
         transitive = true;
     }
+    compile "com.android.support:appcompat-v7:21.0.+"
 }
