--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,13 @@ android {
 
 
 dependencies {
+    compile "com.android.support:appcompat-v7:21.0.+"
+    compile "com.android.support:recyclerview-v7:21.0.+"
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/core-3.1.0.jar')
     compile 'com.squareup.retrofit:retrofit:1.8.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.0.1@aar') {
         transitive = true;
     }
-    compile "com.android.support:appcompat-v7:21.0.+"
+
 }
