--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,14 @@ dependencies {
     compile "com.android.support:recyclerview-v7:21.0.+"
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/core-3.1.0.jar')
-    compile 'com.squareup.retrofit:retrofit:1.8.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.0.1@aar') {
         transitive = true;
     }
-
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+    compile('com.twitter.sdk.android:twitter:1.0.0@aar') {
+        transitive = true;
+    }
+    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.squareup.picasso:picasso:2.5.0'
 }
