--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ android {
 
 
 dependencies {
-    compile "com.android.support:appcompat-v7:21.0.+"
-    compile "com.android.support:recyclerview-v7:21.0.+"
+    compile "com.android.support:appcompat-v7:21.0.3"
+    compile "com.android.support:recyclerview-v7:21.0.0"
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/core-3.1.0.jar')
     compile 'com.squareup.retrofit:retrofit:1.9.0'
