--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,9 @@ android {
 
 
 dependencies {
-    compile "com.android.support:appcompat-v7:22.1.0"
-    compile "com.android.support:recyclerview-v7:21.0.0"
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/core-3.1.0.jar')
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile files('libs/core-3.2.1.jar')
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.0.1@aar') {
         transitive = true;
@@ -55,6 +54,7 @@ dependencies {
     compile('com.twitter.sdk.android:twitter:1.0.0@aar') {
         transitive = true;
     }
-    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.google.android.gms:play-services-plus:8.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+//    compile 'com.google.code.gson:gson:2.5'
 }
